test/visibility/only/checkUsePathBadFunctionAccess.chpl
use M only b, f1;

f2();
writeln(b);
// Should fail to compile due to the f2 call
